<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="notification_title">Job Service</string>
    <string name="notification_content">Your Job ran to completion!</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_scheduled_toast">Job Scheduled, job will run when he constraints are met.</string>
    <string name="set_constraint_toast">Please set at least one constraint</string>
    <string name="jobs_cancelled_toast">Jobs cancelled</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline: </string>
    <string name="not_set">Not Set</string>
    <string name="time_to_sleep">Time to sleep:</string>
    <string name="schedule_asynctask">Schedule AsyncTask</string>
    <string name="cancel_asynctask">Cancel AsyncTask</string>
    <string name="async_task_scheduled">Async Task scheduled, it will run when constraints are met.</string>
    <string name="async_task_cancelled">Async Task cancelled!</string>
    <string name="time_not_set_message">Please, specify the amount of time to sleep</string>
    <string name="job_failed_message">Job failed Rescheduled to run again when conditions are met.</string>
</resources>
